# pyazul

./: .bandit  .env copy  .env.copy  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  conftest.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  util.py
.cursor/rules/: 3ds_secure_flow.mdc  architecture_overview.mdc  coding_standards_and_linting.mdc  configuration_management.mdc  error_handling_conventions.mdc  future_development_notes.mdc  linting_and_formatting_standards.mdc  models_and_data_handling.mdc  python_best_practices.mdc  python_docstring_best_practices.mdc  schemas_validation_logic.mdc  test_structure_guidelines.mdc
.github/workflows/: cd.yaml  ci.yaml  linting.yaml  main.yaml  tests-e2e.yaml  tests-unit.yaml  tests.yaml
.trunk/: trunk.yaml
azul-payments/: requirements.txt
azul-payments/method_parsers/process_payment/: dv_sale_transaction.py
azul-payments/method_parsers/verify_transaction/: __init__.py  verify_transaction.py
certs/: progressa.key  progressa.local.crt
docs/decisions/: 0001-pluggable-3ds-session-management.md  0002-optional-synchronous-api-wrapper.md  0003-advanced-http-client-customization.md  0004-consolidate-settings-logic-in-azulapi.md  0005-standardized-test-structure.md  0006-reorganize-models-by-business-domain.md  example.md  template.md
docs/development/: azul_documentation.md
examples/: datavault_flow_example.py  hold_example.py  payment_example.py  payment_page_server.py  post_example.py  refund_example.py  secure_3ds_example.py  secure_example.py  test_certificates.py  token_secure_webapp.py  verify_example.py
examples/templates/: iframe_3ds.html  index.html  processing.html  result.html  token_index.html
pyazul/: __init__.py  exceptions.py  index.py  models.py  parsers.py  requirements.txt  token_secure_webapp.py  utils.py  validate.py
pyazul/api/: __init__.py  client.py  constants.py
pyazul/core/: __init__.py  base.py  config.py  exceptions.py
pyazul/examples/: datavault_flow_example.py  hold_example.py  payment_example.py  payment_page_server.py  post_example.py  refund_example.py  secure_example.py  test_certificates.py  verify_example.py
pyazul/method_parsers/create/: __init__.py  dv_create.py
pyazul/method_parsers/delete/: __init__.py  dv_delete.py
pyazul/method_parsers/process_payment/: __init__.py  sale_transaction.py
pyazul/models/: __init__.py  base.py  datavault.py  payment.py  schemas.py  secure.py
pyazul/models/datavault/: __init__.py  models.py
pyazul/models/payment/: __init__.py  models.py
pyazul/models/payment_page/: __init__.py  models.py
pyazul/models/three_ds/: __init__.py  models.py
pyazul/models/verification/: __init__.py  models.py
pyazul/services/: __init__.py  datavault.py  payment_page.py  secure.py  transaction.py
templates/: error.html  index.html  result.html  token_index.html
tests/: conftest.py  test_models.py
tests/e2e/: conftest.py  helpers.py
tests/e2e/services/: test_datavault_integration.py  test_hold_integration.py  test_payment_integration.py  test_payment_page_integration.py  test_post_integration.py  test_secure_integration.py  test_verify_integration.py  test_void_integration.py
tests/fixtures/: cards.py  order.py
tests/integration/: conftest.py
tests/integration/services/: test_datavault_integration.py  test_hold_integration.py  test_payment_integration.py  test_payment_page_integration.py  test_post_integration.py  test_secure_integration.py  test_verify_integration.py  test_void_integration.py
tests/services/: test_datavault.py  test_hold.py  test_payment.py  test_payment_page.py  test_post.py  test_secure.py  test_token_secure.py  test_verify.py  test_void.py
tests/unit/: conftest.py  test_azul_api.py  test_azul_api_async.py
tests/unit/core/: test_config_unit.py  test_exceptions_unit.py
tests/unit/models/: test_schemas_unit.py  test_three_ds.py
tests/unit/services/: test_secure_service_unit.py  test_token_secure_service_unit.py  test_transaction_service_unit.py
