[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyazul"
version = "1.1.0"
description = "An Azul Webservices light wrapper for Python."
authors = [{ name = "INDEXA Inc.", email = "info@indexa.do" }]
license = { text = "GNU Lesser General Public License v3 (LGPLv3)" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]
dependencies = ["httpx[http2]", "pydantic>=2.0.0", "pydantic-settings>=2.0.0", "aiohttp>=3.11.0"]
requires-python = ">=3.9"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/indexa-git/pyazul/"

[tool.setuptools.packages.find]
include = ["pyazul", "pyazul.*"]

[project.optional-dependencies]
testing = ["pytest", "pytest-dotenv", "pytest-cov", "pytest-asyncio"]

[tool.pytest.ini_options]
addopts = "-v --import-mode=importlib"
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
